--- a/Geo2.tex
+++ b/Geo2.tex
@@ -163,13 +163,14 @@ E is the intersection of AB and CD. Prove E is the midpoint of CD.
 
 \subsection{Theorem}
 In a triangle abc=4RS
+
 \includegraphics{Picture18.png}
 
 \pagebreak
 
 \subsection{Problem}
 
-4.4.	Given AE is the external angle bisector of angle A, 
+Given AE is the external angle bisector of angle A, 
 AE intersects BC at G, 
 the tangent at A intersects BC at F. 
 Prove AFG is an isosceles triangle.
