--- a/Geo2.tex
+++ b/Geo2.tex
@@ -191,4 +191,6 @@ If a quadrilateral is inscribable in a circle then the product of the lengths of
 \subsection{Problem}
 In \(\triangle\)ABC, point D is inside of ABC such that \(\angle DAC = \angle DCA=30^{\circ} \) and \(\angle DBA=60^{\circ}\). E is the midpoint on BC and F is a trisect point on AC such that \(CF = \frac{CA}{3} \). Prove DE \(\perp\) EF.
 
+\includegraphics{Picture21.png}
+
 \end{document}
