--- a/Geo2.tex
+++ b/Geo2.tex
@@ -7,7 +7,7 @@
 \usepackage{graphicx}
 
 \title{Geometry 2 - Circles}
-\author{TSS Math CLub}
+\author{TSS Math Club}
 \date{Oct 2022}
 
 \graphicspath{ {./geo2/} }
