--- a/Geo2.tex
+++ b/Geo2.tex
@@ -11,6 +11,7 @@
 \usepackage{natbib}
 \usepackage{wrapfig}
 \usepackage{graphicx}
+\usepackage{amssymb}
 
 \graphicspath{ {./geo2/} }
 
@@ -191,7 +192,7 @@ If a quadrilateral is inscribable in a circle then the product of the lengths of
 \pagebreak
 
 \subsection{Problem}
-In \(\triangle\)ABC, point D is inside of ABC such that \(\angle DAC = \angle DCA=30^{\circ} \) and \(\angle DBA=60^{\circ}\). E is the midpoint on BC and F is a trisect point on AC such that \(CF = \frac{CA}{3} \). Prove DE \(\perp\) EF.
+In \(\triangle\)ABC, point D is inside of ABC such that \(\angle \mathrm{DAC} = \angle \mathrm{DCA}=30^{\circ} \) and \(\angle \mathrm{DBA}=60^{\circ}\). E is the midpoint on BC and F is a trisect point on AC such that \(\mathrm{CF} = \frac{\mathrm{CA}}{3} \). Prove DE \(\perp\) EF.
 
 \includegraphics{Picture21.png}
 
