--- a/Geo2.tex
+++ b/Geo2.tex
@@ -36,6 +36,7 @@
     \begin{tikzpicture}[x=0.6pt,y=0.6pt,yscale=-1,xscale=1]
         %uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
 
+    
         %Shape: Circle [id:dp17379134999161217] 
         \draw   (28,148.36) .. controls (28,79.68) and (83.68,24) .. (152.36,24) .. controls (221.04,24) and (276.72,79.68) .. (276.72,148.36) .. controls (276.72,217.04) and (221.04,272.72) .. (152.36,272.72) .. controls (83.68,272.72) and (28,217.04) .. (28,148.36) -- cycle ;
         %Straight Lines [id:da45878936702265327] 
@@ -70,7 +71,7 @@ Inscribed angle: \\ \\
 
 
 \subsection{Central angle is twice any inscribed angle}
-\includegraphics{Picture2.png}
+\includegraphics[scale=1.05]{Picture2.png}
 
 \pagebreak
 
