--- a/Geo3.tex
+++ b/Geo3.tex
@@ -452,4 +452,52 @@ Given BD:DC=1:5, AE:EC=1:4. Find AF:FD.
 
 \pagebreak
 
+\section{Angle Bisector}
+
+
+\subsection{Definition}
+
+\vspace{30px}
+
+\subsection{Angle Bisector  Theorem}
+
+
+If AD bisects $\angle A$, then
+
+$$\frac{BD}{CD}=\frac{AB}{AC}$$
+
+\tikzset{every picture/.style={line width=0.75pt}} %set default line width to 0.75pt        
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+%uncomment if require: \path (0,300); %set diagram left start at 0, and has height of 300
+
+%Straight Lines [id:da711612096145047] 
+\draw    (139.91,73.03) -- (107.91,180.03) ;
+%Straight Lines [id:da728293619031698] 
+\draw    (107.91,180.03) -- (384.91,177.03) ;
+%Straight Lines [id:da6290146606670881] 
+\draw    (139.91,73.03) -- (384.91,177.03) ;
+%Straight Lines [id:da9579416581915836] 
+\draw    (139.91,73.03) -- (200.91,180.03) ;
+
+% Text Node
+\draw (139.91,55.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {A};
+% Text Node
+\draw (109.91,183.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {B};
+% Text Node
+\draw (386.91,180.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {C};
+% Text Node
+\draw (202.91,183.03) node [anchor=north west][inner sep=0.75pt]   [align=left] {D};
+
+
+\end{tikzpicture}
+
+\vspace{100px}
+
+\subsection{Angle bisectors of a trinagle are concurrent}
+
+\pagebreak
+
+\section{Median}
+
 \end{document}
